--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Reading List App</title>
+    <script src="js/app.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script type="js/app.js"></script>
   </head>
   <body>
     <form id="new-item-form">
@@ -34,5 +34,6 @@
 
     <h1>Reading List</h1>
     <div id="reading-list"></div>
+    <p id="input-result"></p>
   </body>
 </html>
